--- a/shop.html
+++ b/shop.html
@@ -144,7 +144,7 @@
       <div class="row g-4">
         <div class="col-lg-4 col-md-6">
           <div class="card h-100">
-            <img src="images/cuffed.jpg" alt="cuffed pants" class="img-fluid">
+            <img src="cuffed.jpg" alt="cuffed pants" class="img-fluid">
             <div class="card-body">
               <h5 class="card-title">BLACK PLAIN CUFFED SWEATPANTS</h5>
               <p><b>Price:</b> P250</p>
@@ -155,7 +155,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="card h-100">
-                        <img src="images/baggie pants.jpg" alt="baggie pants" class="img-fluid">
+                        <img src="baggie pants.jpg" alt="baggie pants" class="img-fluid">
                         <div class="card-body">
                             <h5 class="card-title"><b>BLACK PLAIN STRAIGHT SWEATPANTS</b></h5>
                             <p><b>Price:</b> P300</p>
@@ -169,7 +169,7 @@
 
  <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="card h-100">
-                        <img src="images/grey.pants.jpg" alt="grey pants" class="img-fluid">
+                        <img src="grey.pants.jpg" alt="grey pants" class="img-fluid">
                         <div class="card-body">
                             <h5 class="card-title"><b>GREY BAGGIE STRAIGHT SWEATPANTS</b></h5>
                             <p><b>Price:</b>P300</p>
@@ -188,7 +188,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="card h-100">
-                        <img src="images/hoodie.png" alt="hoodie" class="img-fluid">
+                        <img src="hoodie.png" alt="hoodie" class="img-fluid">
                         <div class="card-body">
                             <h5 class="card-title"><b>ACID  WASHED BLACK HOODIE</b></h5>
                             <p><b>Price:</b>P290</p>
@@ -201,7 +201,7 @@
                 </div>
        <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="card h-100">
-                        <img src="images/zip up hoodie.jpg" alt="hoodie" class="img-fluid">
+                        <img src="zip up hoodie.jpg" alt="hoodie" class="img-fluid">
                         <div class="card-body">
                             <h5 class="card-title"><b>ZIP UP HOODIE</b></h5>
                             <p><b>Price:</b>P350</p>
@@ -214,7 +214,7 @@
                 </div>
      <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="card h-100">
-                        <img src="images/plain hoodie.jpg" alt="plain hoodie" class="img-fluid">
+                        <img src="plain hoodie.jpg" alt="plain hoodie" class="img-fluid">
                         <div class="card-body">
                             <h5 class="card-title"><b>DISCOVERY SPORT</b></h5>
                             <p><b>Price:</b>P250</p>
