--- a/index.html
+++ b/index.html
@@ -102,21 +102,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="4000">
-      <img src="images/hoodie.home.jpg" class="d-block w-100" alt="Premium hoodie collection">
+      <img src="hoodie.home.jpg" class="d-block w-100" alt="Premium hoodie collection">
       <div class="carousel-caption">
         <h5>New Hoodie Collection</h5>
         <p>Discover our comfortable and stylish hoodies for every occasion</p>
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="4000">
-      <img src="images/pants.home.jpg" class="d-block w-100" alt="Trendy baggie pants">
+      <img src="pants.home.jpg" class="d-block w-100" alt="Trendy baggie pants">
       <div class="carousel-caption">
         <h5>Baggie Pants</h5>
         <p>Stay comfortable and fashionable with our latest designs</p>
       </div>
     </div>
     <div class="carousel-item" data-bs-interval="4000">
-      <img src="images/tshirt.home.jpg" class="d-block w-100" alt="Premium t-shirts">
+      <img src="tshirt.home.jpg" class="d-block w-100" alt="Premium t-shirts">
       <div class="carousel-caption">
         <h5>Essential T-Shirts</h5>
         <p>High-quality fabrics with perfect fit for everyday wear</p>
